ASPNetMicroserviceTemplate/k8s/ingress-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    # - name: https
    #   port: 443
    #   targetPort: 443
  type: LoadBalancer
