ASPNetMicroserviceTemplate/k8s/testService01-deploy.yaml
# Спецификация для создания сервиса
# Манифест - Заголовок
apiVersion: apps/v1
kind: Deployment
# Манифест - Объект deployment
metadata:
  # Имя сервиса
  name: testservice01
  namespace: ingress-example
spec:
  # Количество реплик сервиса 
  replicas: 1
  selector:
    matchLabels:
      pod: testservice01 # Селектор для поиска подов
  # Указание стратегии обновления
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 # Количество подов, которые могут быть недоступны во время обновления
      maxSurge: 2       # Количество подов, которые могут быть созданы во время обновления
  template:
    # Манифест - Объект pod (PodSpec)
    metadata:
      labels:
        pod: testservice01 # Метаданные для поиска подов
    spec:
      priorityClassName: hight-priority # Указание класса приоритета
      containers:
        # Имя контейнера
      - name: testservice01-container
        # Адрес образа на Docker Hub
        image: docker.io/vegiwoo/aspnetmicroservicetemplate:1.0.12
        resources:
          # Ресурсы, которые будут выделены контейнеру
          requests:
            memory: "512Mi" # Минимально необходимая память в мебибайтах 
            cpu: "500m"     # Минимально необходимый CPU в миллиярдных долях (250m = 25% ядра)
          # Лимиты, которые могут быть выделены контейнеру
          limits:
            memory: "512Mi"   # Максимально допустимая память
            cpu: "500m"       # Максимально допустимый CPU
        ports:  
        - containerPort: 8081
        # Readiness and liveness probe
        readinessProbe:
          initialDelaySeconds: 10 # Задержка перед проверкой
          periodSeconds: 30       # Период проверки
          # Выполняется этот http-запрос
          httpGet:
            path: /readyz
            port: 8081
            scheme: HTTP
          timeoutSeconds: 2       # Таймаут ответа на запрос
          failureThreshold: 1     # Количество допустимых неудачных попыток
          successThreshold: 1     # Количество необходимых успешных попыток
        livenessProbe:
          initialDelaySeconds: 30 
          periodSeconds: 30       
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          timeoutSeconds: 5       
          failureThreshold: 3
          successThreshold: 1
---
# ClusterIP для сервиса
apiVersion: v1
kind: Service
metadata:
  name: testservice01-cip
  namespace: ingress-example
spec:
  selector:
    app: testservice01
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
