ASPNetMicroserviceTemplate/k8s/testService01_nodePort.yaml
# Тестовый сервис 1 - NodePort
apiVersion: v1
kind: Service
metadata:
  name: aspnetmicroservicetemplate-internal
spec:
  selector:
    app: aspnetmicroservicetemplate
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  type: NodePort
