ASPNetMicroserviceTemplate/k8s/testService02-deploy.yaml
# Тестовый сервис 2 - Спецификация
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testservice02
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testservice02
  template:
    metadata:
      labels:  
        app: testservice02
    spec:
      containers:
      - name: testservice02-container
        image: wdenniss/robohash:3
        ports:  
        - containerPort: 8082
# ---
# # Тестовый сервис 2 - NodePort
# apiVersion: v1
# kind: Service
# metadata:
#   name: robohash-np
#   namespace: default
# spec:
#   selector:
#     pod: robohash
#   ports:
#   - port: 8082
#     targetPort: 8082
#     protocol: TCP
#   type: NodePort
  
---
# Тестовый сервис 2 - ClusterIP
# - сервис достпен только внутри кластера
# ClusterIP для сервиса
# - сервис доступен только внутри кластера
apiVersion: v1
kind: Service
metadata:
  name: testservice02-np
  namespace: default
spec:
  selector:
    app: testservice02
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
