ASPNetMicroserviceTemplate/k8s/testServices_ingress.yaml
# Ingress resource for routing traffic to testservice01-np and robohash-np services
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testservices-ingress
  namespace: default
spec:
  rules:
    - host: repack.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testservice01-np
                port:
                  number: 8081
          - path: /robohash
            pathType: Prefix
            backend:
              service:
                name: robohash-np
                port:
                  number: 8082
